Rewrote InfoExecutionDegree as a wrapper of ExecutionDegree.